--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,5 @@
         "-p",
         "test*.py"
     ],
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "tests"
-    ]
+    "python.testing.unittestEnabled": true
 }
