--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       run: |
         python -m venv env
         source env/bin/activate
-        pip install flake8 black pytest
+        pip install flake8 pytest
     - name: Lint with flake8
       run: |
         source env/bin/activate
